fix: update execution counts and improve bounding box analysis in exploratory notebook

--- a/tcc/autoencoders/exploratory.ipynb
+++ b/tcc/autoencoders/exploratory.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +44,14 @@
     "splits = ['train', 'valid', 'test']\n",
     "\n",
     "date_str = datetime.datetime.now().strftime('%Y-%m-%d_%H-%M-%S')\n",
-    "experiments_path = os.path.join(project_path, \"experiments\", date_str)\n",
+    "experiments_path = os.path.join(project_path, \"experiments\", \"eda\", date_str)\n",
     "os.makedirs(experiments_path, exist_ok=True)\n",
     "eda_summary = {}  # Dictionary to store all EDA results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,19 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing train: 100%|██████████| 2327/2327 [00:06<00:00, 366.29it/s]\n",
-      "Processing valid: 100%|██████████| 521/521 [00:01<00:00, 346.71it/s]\n",
-      "Processing test: 100%|██████████| 417/417 [00:01<00:00, 366.29it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2. Bounding box statistics\n",
     "def parse_yolo_label(label_path):\n",
@@ -118,17 +108,32 @@
     "def analyze_bounding_boxes(split):\n",
     "    all_bboxes = []\n",
     "    bboxes_per_image = []\n",
-    "    for label_path in tqdm(split_data[split]['labels'], desc=f\"Processing {split}\"):\n",
+    "\n",
+    "    for img_path, label_path in tqdm(\n",
+    "        zip(split_data[split]['images'], split_data[split]['labels']),\n",
+    "        desc=f\"Processing BBoxes in {split}\", total=len(split_data[split]['images'])\n",
+    "    ):\n",
     "        bboxes = parse_yolo_label(label_path)\n",
+    "        img = cv2.imread(img_path)\n",
+    "        img_height, img_width = img.shape[:2]  # Get image dimensions\n",
+    "\n",
+    "        # Scale bbox size to original pixel units\n",
+    "        corrected_bboxes = [\n",
+    "            (bbox[2] * img_width, bbox[3] * img_height) for bbox in bboxes\n",
+    "        ]  # width, height scaled\n",
     "        bboxes_per_image.append(len(bboxes))\n",
-    "        all_bboxes.extend(bboxes)\n",
-    "    bboxes_df = pd.DataFrame(all_bboxes, columns=['x_center', 'y_center', 'width', 'height'])\n",
+    "        all_bboxes.extend(corrected_bboxes)\n",
+    "\n",
+    "    # Convert to DataFrame for easier calculations\n",
+    "    bboxes_df = pd.DataFrame(all_bboxes, columns=['width', 'height'])\n",
+    "\n",
     "    return {\n",
     "        'mean_bboxes_per_image': np.mean(bboxes_per_image),\n",
     "        'median_bboxes_per_image': np.median(bboxes_per_image),\n",
-    "        'mean_bbox_size': bboxes_df[['width', 'height']].mean().values.tolist(),\n",
-    "        'median_bbox_size': bboxes_df[['width', 'height']].median().values.tolist()\n",
+    "        'mean_bbox_size_pixels': bboxes_df[['width', 'height']].mean().values.tolist(),\n",
+    "        'median_bbox_size_pixels': bboxes_df[['width', 'height']].median().values.tolist()\n",
     "    }\n",
+    "\n",
     "\n",
     "bbox_stats = {split: analyze_bounding_boxes(split) for split in splits}\n",
     "eda_summary['bbox_stats'] = bbox_stats"
@@ -136,19 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Analyzing train: 100%|██████████| 2320/2320 [00:16<00:00, 143.17it/s]\n",
-      "Analyzing valid: 100%|██████████| 521/521 [00:03<00:00, 157.51it/s]\n",
-      "Analyzing test: 100%|██████████| 417/417 [00:02<00:00, 143.69it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. Image size statistics\n",
     "def analyze_image_sizes(split):\n",
@@ -169,17 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EDA summary saved to /mnt/c/Users/Ricardo/Documents/Development/tcc-1/tcc/autoencoders/../../experiments/2024-12-17_20-05-54/eda_summary.md\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 4. Save EDA summary to Markdown file\n",
     "eda_summary_md_path = os.path.join(experiments_path, 'eda_summary.md')\n",
