feat: implement dataset splitting by class for YOLO format

--- a/tcc/train_analysis.ipynb
+++ b/tcc/train_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,8 @@
     "\n",
     "    # Configurações de arquivos\n",
     "    general_csv = get_path_from_cwd(\"runs/detect/train23/results.csv\")\n",
-    "    subdivided_csv = get_path_from_cwd(\"runs/detect/train21/results.csv\")\n",
+    "    # subdivided_csv = get_path_from_cwd(\"runs/detect/train21/results.csv\")\n",
+    "    subdivided_csv = get_path_from_cwd(\"runs/detect/train30/results.csv\")\n",
     "    output_folder = get_path_from_cwd(\"experiments/comparison\")\n",
     "\n",
     "    os.makedirs(output_folder, exist_ok=True)\n",
@@ -112,9 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/c/Users/Ricardo/Documents/Development/tcc-1/venv/lib/python3.12/site-packages/pandas/core/nanops.py:1016: RuntimeWarning: invalid value encountered in subtract\n",
+      "  sqr = _ensure_numeric((avg - values) ** 2)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -137,6 +146,271 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[AVISO] results.csv não encontrado em ../runs/detect/train49.\n",
+      "[AVISO] results.csv não encontrado em ../runs/detect/train50.\n",
+      "       run        model  epoch  mAP50-95\n",
+      "7  train48   yolo11m.pt    226   0.74094\n",
+      "9  train52   yolo11m.pt    226   0.74094\n",
+      "0  train41   yolov9m.pt    384   0.66601\n",
+      "2  train43  yolov10m.pt    240   0.65493\n",
+      "3  train44   yolov5m.pt    176   0.65298\n",
+      "4  train45   yolov3u.pt    220   0.64664\n",
+      "6  train47   yolo11m.pt    311   0.61877\n",
+      "8  train51   yolo11m.pt    261   0.60368\n",
+      "5  train46   yolo11m.pt    144   0.53481\n",
+      "1  train42  yolov10m.pt      1   0.45046\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import re\n",
+    "import pandas as pd\n",
+    "import yaml\n",
+    "\n",
+    "base_dir = \"../runs/detect\"\n",
+    "pattern = r\"train(\\d+)$\"  # Regex para achar 'train' seguido de um número\n",
+    "best_results = []\n",
+    "\n",
+    "# 1. Listar todos os diretórios em runs/detect e filtrar por trainNN\n",
+    "for run_name in os.listdir(base_dir):\n",
+    "    match = re.match(pattern, run_name)\n",
+    "    if not match:\n",
+    "        continue\n",
+    "\n",
+    "    run_index = int(match.group(1))\n",
+    "\n",
+    "    # 2. Filtrar apenas runs com índice maior que 30\n",
+    "    if run_index <= 40:\n",
+    "        continue\n",
+    "\n",
+    "    run_path = os.path.join(base_dir, run_name)\n",
+    "\n",
+    "    # Localiza o arquivo args.yaml\n",
+    "    args_path = os.path.join(run_path, \"args.yaml\")\n",
+    "    if not os.path.isfile(args_path):\n",
+    "        print(f\"[AVISO] args.yaml não encontrado em {run_path}.\")\n",
+    "        continue\n",
+    "\n",
+    "    # Lê o arquivo args.yaml para extrair o nome do modelo\n",
+    "    with open(args_path, \"r\") as f:\n",
+    "        args_data = yaml.safe_load(f)\n",
+    "        model_name = args_data.get(\"model\", \"modelo_desconhecido\")\n",
+    "\n",
+    "    # Localiza o arquivo results.csv\n",
+    "    csv_path = os.path.join(run_path, \"results.csv\")\n",
+    "    if not os.path.isfile(csv_path):\n",
+    "        print(f\"[AVISO] results.csv não encontrado em {run_path}.\")\n",
+    "        continue\n",
+    "\n",
+    "    # Lê o CSV em um DataFrame do pandas\n",
+    "    df = pd.read_csv(csv_path)\n",
+    "\n",
+    "    # Verifica se há a coluna de mAP50-95\n",
+    "    if \"metrics/mAP50-95(B)\" not in df.columns:\n",
+    "        print(\n",
+    "            f\"[AVISO] Coluna 'metrics/mAP50-95(B)' não encontrada em {csv_path}.\")\n",
+    "        continue\n",
+    "\n",
+    "    # Verifica se existe algum valor não-nulo nessa coluna\n",
+    "    if df[\"metrics/mAP50-95(B)\"].dropna().empty:\n",
+    "        print(\n",
+    "            f\"[AVISO] Nenhum valor válido (não-nulo) em 'metrics/mAP50-95(B)' em {run_path}.\")\n",
+    "        continue\n",
+    "\n",
+    "    # Identifica o índice com o maior valor de mAP50-95\n",
+    "    best_index = df[\"metrics/mAP50-95(B)\"].idxmax()\n",
+    "    best_row = df.loc[best_index]\n",
+    "\n",
+    "    # Salva resultados básicos (ajuste conforme desejar)\n",
+    "    best_results.append({\n",
+    "        \"run\": run_name,\n",
+    "        \"model\": model_name,\n",
+    "        \"epoch\": int(best_row[\"epoch\"]),\n",
+    "        \"mAP50-95\": best_row[\"metrics/mAP50-95(B)\"]\n",
+    "    })\n",
+    "\n",
+    "# Converte para DataFrame e ordena pelo melhor mAP50-95\n",
+    "df_best = pd.DataFrame(best_results)\n",
+    "if not df_best.empty:\n",
+    "    df_best.sort_values(by=\"mAP50-95\", ascending=False, inplace=True)\n",
+    "\n",
+    "print(df_best)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def converter_segundos(segundos):\n",
+    "    \"\"\"Converte um total de segundos para horas, minutos e segundos.\"\"\"\n",
+    "    horas = segundos // 3600\n",
+    "    resto = segundos % 3600\n",
+    "    minutos = resto // 60\n",
+    "    segundos_restantes = resto % 60\n",
+    "    return horas, minutos, segundos_restantes\n",
+    "\n",
+    "\n",
+    "\n",
+    "def formatar_tempo(horas, minutos, segundos):\n",
+    "    \"\"\"Formata a saída em português de forma elegante.\"\"\"\n",
+    "    partes = []\n",
+    "    if horas > 0:\n",
+    "        partes.append(f\"{horas} {'hora' if horas == 1 else 'horas'}\")\n",
+    "    if minutos > 0:\n",
+    "        partes.append(f\"{minutos} {'minuto' if minutos == 1 else 'minutos'}\")\n",
+    "    if segundos > 0 or not partes:\n",
+    "        partes.append(\n",
+    "            f\"{segundos} {'segundo' if segundos == 1 else 'segundos'}\")\n",
+    "\n",
+    "    if len(partes) == 1:\n",
+    "        return partes[0]\n",
+    "    else:\n",
+    "        return \", \".join(partes[:-1]) + \" e \" + partes[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\\begin{table}[ht]\n",
+      "\\centering\n",
+      "\\begin{tabular}{lrlrr}\n",
+      "\\toprule\n",
+      "modelo & épocas & tempo & mAP50 & mAP50-95 \\\\\n",
+      "\\midrule\n",
+      "badm & 226 & 1.0 hora, 50.0 minutos e 42.27000000000044 segundos & 0.9631 & 0.7409 \\\\\n",
+      "good & 261 & 4.0 horas, 33.0 minutos e 9.900000000001455 segundos & 0.9153 & 0.6037 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n",
+      "\\caption{Resultados dos melhores modelos para cada run.}\n",
+      "\\label{tab:resultados}\n",
+      "\\end{table}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Dicionário que mapeia cada run ao nome de modelo correspondente\n",
+    "runs_of_interest = {\n",
+    "    # \"train23\": \"yolov8m\",\n",
+    "    # \"train41\": \"yolov9m\",\n",
+    "    # \"train42\": \"yolov10m\",\n",
+    "    # \"train40\": \"yolo11m\",\n",
+    "    # \"train44\": \"yolov5m\",\n",
+    "    # \"train45\": \"yolov3u\",\n",
+    "\n",
+    "\n",
+    "    \"train51\": \"good\",\n",
+    "    \"train52\": \"badm\",\n",
+    "\n",
+    "    # Adicione aqui outros runs e nomes de modelo conforme necessário\n",
+    "}\n",
+    "\n",
+    "# Lista para armazenar o melhor resultado de cada run\n",
+    "best_results = []\n",
+    "\n",
+    "for run_name, model_name in runs_of_interest.items():\n",
+    "    csv_path = f\"../runs/detect/{run_name}/results.csv\"\n",
+    "\n",
+    "    if not os.path.isfile(csv_path):\n",
+    "        print(f\"Arquivo CSV não encontrado para o run {run_name}: {csv_path}\")\n",
+    "        continue\n",
+    "\n",
+    "    # Lê o CSV em um DataFrame do pandas\n",
+    "    df = pd.read_csv(csv_path)\n",
+    "\n",
+    "    # Verifica se a coluna da métrica existe no DataFrame\n",
+    "    if \"metrics/mAP50(B)\" not in df.columns:\n",
+    "        print(f\"Coluna 'metrics/mAP50-95(B)' não encontrada em {csv_path}.\")\n",
+    "        continue\n",
+    "\n",
+    "    # Verifica se há valores não-nulos para essa métrica\n",
+    "    if df[\"metrics/mAP50(B)\"].dropna().empty:\n",
+    "        print(\n",
+    "            f\"Nenhum valor válido (não-nulo) para 'metrics/mAP50-95(B)' em {run_name}.\")\n",
+    "        continue\n",
+    "\n",
+    "    # Localiza o índice da linha com maior valor de mAP50-95\n",
+    "    best_index = df[\"metrics/mAP50-95(B)\"].idxmax()\n",
+    "\n",
+    "    # Seleciona a linha do melhor resultado\n",
+    "    best_row = df.loc[best_index]\n",
+    "\n",
+    "    best_results.append({\n",
+    "        \"run\": run_name,\n",
+    "        \"modelo\": model_name,\n",
+    "        \"épocas\": int(best_row[\"epoch\"]),\n",
+    "        \"tempo\": formatar_tempo(*converter_segundos(best_row[\"time\"])),\n",
+    "        \"train/box_loss\": best_row[\"train/box_loss\"],\n",
+    "        \"train/cls_loss\": best_row[\"train/cls_loss\"],\n",
+    "        \"train/dfl_loss\": best_row[\"train/dfl_loss\"],\n",
+    "        \"precision\": best_row[\"metrics/precision(B)\"],\n",
+    "        \"recall\": best_row[\"metrics/recall(B)\"],\n",
+    "        \"mAP50\": best_row[\"metrics/mAP50(B)\"],\n",
+    "        \"mAP50-95\": best_row[\"metrics/mAP50-95(B)\"]\n",
+    "    })\n",
+    "\n",
+    "# Converte a lista de dicionários em um DataFrame\n",
+    "df_best = pd.DataFrame(best_results)\n",
+    "\n",
+    "# Ordena pelos melhores resultados em mAP50-95 (decrescente)\n",
+    "df_best.sort_values(by=\"mAP50-95\", ascending=False, inplace=True)\n",
+    "\n",
+    "# Exemplo de geração de tabela em LaTeX usando pandas\n",
+    "# Personalize as colunas e formatação conforme desejar\n",
+    "latex_table_content = df_best.to_latex(\n",
+    "    index=False,\n",
+    "    float_format=\"%.4f\",\n",
+    "    columns=[\n",
+    "        # \"run\",\n",
+    "        \"modelo\",\n",
+    "        \"épocas\",\n",
+    "        \"tempo\",\n",
+    "        # \"train/box_loss\",\n",
+    "        # \"train/cls_loss\",\n",
+    "        # \"train/dfl_loss\",\n",
+    "        # \"precision\",\n",
+    "        # \"recall\",\n",
+    "        \"mAP50\",\n",
+    "        \"mAP50-95\"\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Para incluir ambiente LaTeX com caption e label\n",
+    "latex_table = r\"\"\"\n",
+    "\\begin{table}[ht]\n",
+    "\\centering\n",
+    "\"\"\" + latex_table_content + r\"\"\"\n",
+    "\\caption{Resultados dos melhores modelos para cada run.}\n",
+    "\\label{tab:resultados}\n",
+    "\\end{table}\n",
+    "\"\"\"\n",
+    "\n",
+    "print(latex_table)"
    ]
   }
  ],
